--- a/index.html
+++ b/index.html
@@ -41,107 +41,106 @@
 <p style="font-size:2rem;color:#43696d;margin-left:0.5rem;font-weight:bold">Metro Monitor 2018 Dashboards (PDF)</p>
 
 
-<p class="pdf-profile-link"><a href="Akron.pdf" target="_blank">Akron</a></p>
-<p class="pdf-profile-link"><a href="Albany.pdf" target="_blank">Albany</a></p>
-<p class="pdf-profile-link"><a href="Albuquerque.pdf" target="_blank">Albuquerque</a></p>
-<p class="pdf-profile-link"><a href="Allentown.pdf" target="_blank">Allentown</a></p>
-<p class="pdf-profile-link"><a href="Atlanta.pdf" target="_blank">Atlanta</a></p>
-<p class="pdf-profile-link"><a href="Augusta.pdf" target="_blank">Augusta</a></p>
-<p class="pdf-profile-link"><a href="Austin.pdf" target="_blank">Austin</a></p>
-<p class="pdf-profile-link"><a href="Bakersfield.pdf" target="_blank">Bakersfield</a></p>
-<p class="pdf-profile-link"><a href="Baltimore.pdf" target="_blank">Baltimore</a></p>
-<p class="pdf-profile-link"><a href="Baton_Rouge.pdf" target="_blank">Baton_Rouge</a></p>
-<p class="pdf-profile-link"><a href="Birmingham.pdf" target="_blank">Birmingham</a></p>
-<p class="pdf-profile-link"><a href="Boise_City.pdf" target="_blank">Boise_City</a></p>
-<p class="pdf-profile-link"><a href="Boston.pdf" target="_blank">Boston</a></p>
-<p class="pdf-profile-link"><a href="Bridgeport.pdf" target="_blank">Bridgeport</a></p>
-<p class="pdf-profile-link"><a href="Buffalo.pdf" target="_blank">Buffalo</a></p>
-<p class="pdf-profile-link"><a href="Cape_Coral.pdf" target="_blank">Cape_Coral</a></p>
-<p class="pdf-profile-link"><a href="Charleston.pdf" target="_blank">Charleston</a></p>
-<p class="pdf-profile-link"><a href="Charlotte.pdf" target="_blank">Charlotte</a></p>
-<p class="pdf-profile-link"><a href="Chattanooga.pdf" target="_blank">Chattanooga</a></p>
-<p class="pdf-profile-link"><a href="Chicago.pdf" target="_blank">Chicago</a></p>
-<p class="pdf-profile-link"><a href="Cincinnati.pdf" target="_blank">Cincinnati</a></p>
-<p class="pdf-profile-link"><a href="Cleveland.pdf" target="_blank">Cleveland</a></p>
-<p class="pdf-profile-link"><a href="Colorado_Springs.pdf" target="_blank">Colorado_Springs</a></p>
-<p class="pdf-profile-link"><a href="Columbia.pdf" target="_blank">Columbia</a></p>
-<p class="pdf-profile-link"><a href="Columbus.pdf" target="_blank">Columbus</a></p>
-<p class="pdf-profile-link"><a href="Dallas.pdf" target="_blank">Dallas</a></p>
-<p class="pdf-profile-link"><a href="Dayton.pdf" target="_blank">Dayton</a></p>
-<p class="pdf-profile-link"><a href="Deltona.pdf" target="_blank">Deltona</a></p>
-<p class="pdf-profile-link"><a href="Denver.pdf" target="_blank">Denver</a></p>
-<p class="pdf-profile-link"><a href="Des_Moines.pdf" target="_blank">Des_Moines</a></p>
-<p class="pdf-profile-link"><a href="Detroit.pdf" target="_blank">Detroit</a></p>
-<p class="pdf-profile-link"><a href="El_Paso.pdf" target="_blank">El_Paso</a></p>
-<p class="pdf-profile-link"><a href="Fresno.pdf" target="_blank">Fresno</a></p>
-<p class="pdf-profile-link"><a href="Grand_Rapids.pdf" target="_blank">Grand_Rapids</a></p>
-<p class="pdf-profile-link"><a href="Greensboro.pdf" target="_blank">Greensboro</a></p>
-<p class="pdf-profile-link"><a href="Greenville.pdf" target="_blank">Greenville</a></p>
-<p class="pdf-profile-link"><a href="Harrisburg.pdf" target="_blank">Harrisburg</a></p>
-<p class="pdf-profile-link"><a href="Hartford.pdf" target="_blank">Hartford</a></p>
-<p class="pdf-profile-link"><a href="Houston.pdf" target="_blank">Houston</a></p>
-<p class="pdf-profile-link"><a href="index.html" target="_blank">index.html</a></p>
-<p class="pdf-profile-link"><a href="Indianapolis.pdf" target="_blank">Indianapolis</a></p>
-<p class="pdf-profile-link"><a href="Jackson.pdf" target="_blank">Jackson</a></p>
-<p class="pdf-profile-link"><a href="Jacksonville.pdf" target="_blank">Jacksonville</a></p>
-<p class="pdf-profile-link"><a href="Kansas_City.pdf" target="_blank">Kansas_City</a></p>
-<p class="pdf-profile-link"><a href="Knoxville.pdf" target="_blank">Knoxville</a></p>
-<p class="pdf-profile-link"><a href="Lakeland.pdf" target="_blank">Lakeland</a></p>
-<p class="pdf-profile-link"><a href="Las_Vegas.pdf" target="_blank">Las_Vegas</a></p>
-<p class="pdf-profile-link"><a href="Little_Rock.pdf" target="_blank">Little_Rock</a></p>
-<p class="pdf-profile-link"><a href="Los_Angeles.pdf" target="_blank">Los_Angeles</a></p>
-<p class="pdf-profile-link"><a href="Louisville_Jefferson_County.pdf" target="_blank">Louisville_Jefferson_County</a></p>
-<p class="pdf-profile-link"><a href="Madison.pdf" target="_blank">Madison</a></p>
-<p class="pdf-profile-link"><a href="McAllen.pdf" target="_blank">McAllen</a></p>
-<p class="pdf-profile-link"><a href="Memphis.pdf" target="_blank">Memphis</a></p>
-<p class="pdf-profile-link"><a href="Miami.pdf" target="_blank">Miami</a></p>
-<p class="pdf-profile-link"><a href="Milwaukee.pdf" target="_blank">Milwaukee</a></p>
-<p class="pdf-profile-link"><a href="Minneapolis.pdf" target="_blank">Minneapolis</a></p>
-<p class="pdf-profile-link"><a href="Nashville_Davidson.pdf" target="_blank">Nashville_Davidson</a></p>
-<p class="pdf-profile-link"><a href="New_Haven.pdf" target="_blank">New_Haven</a></p>
-<p class="pdf-profile-link"><a href="New_Orleans.pdf" target="_blank">New_Orleans</a></p>
-<p class="pdf-profile-link"><a href="New_York.pdf" target="_blank">New_York</a></p>
-<p class="pdf-profile-link"><a href="North_Port.pdf" target="_blank">North_Port</a></p>
-<p class="pdf-profile-link"><a href="Ogden.pdf" target="_blank">Ogden</a></p>
-<p class="pdf-profile-link"><a href="Oklahoma_City.pdf" target="_blank">Oklahoma_City</a></p>
-<p class="pdf-profile-link"><a href="Omaha.pdf" target="_blank">Omaha</a></p>
-<p class="pdf-profile-link"><a href="Orlando.pdf" target="_blank">Orlando</a></p>
-<p class="pdf-profile-link"><a href="Oxnard.pdf" target="_blank">Oxnard</a></p>
-<p class="pdf-profile-link"><a href="Palm_Bay.pdf" target="_blank">Palm_Bay</a></p>
-<p class="pdf-profile-link"><a href="Philadelphia.pdf" target="_blank">Philadelphia</a></p>
-<p class="pdf-profile-link"><a href="Phoenix.pdf" target="_blank">Phoenix</a></p>
-<p class="pdf-profile-link"><a href="Pittsburgh.pdf" target="_blank">Pittsburgh</a></p>
-<p class="pdf-profile-link"><a href="Portland.pdf" target="_blank">Portland</a></p>
-<p class="pdf-profile-link"><a href="Providence.pdf" target="_blank">Providence</a></p>
-<p class="pdf-profile-link"><a href="Provo.pdf" target="_blank">Provo</a></p>
-<p class="pdf-profile-link"><a href="Raleigh.pdf" target="_blank">Raleigh</a></p>
-<p class="pdf-profile-link"><a href="Richmond.pdf" target="_blank">Richmond</a></p>
-<p class="pdf-profile-link"><a href="Riverside.pdf" target="_blank">Riverside</a></p>
-<p class="pdf-profile-link"><a href="Rochester.pdf" target="_blank">Rochester</a></p>
-<p class="pdf-profile-link"><a href="Sacramento.pdf" target="_blank">Sacramento</a></p>
-<p class="pdf-profile-link"><a href="Salt_Lake_City.pdf" target="_blank">Salt_Lake_City</a></p>
-<p class="pdf-profile-link"><a href="San_Antonio.pdf" target="_blank">San_Antonio</a></p>
-<p class="pdf-profile-link"><a href="San_Diego.pdf" target="_blank">San_Diego</a></p>
-<p class="pdf-profile-link"><a href="San_Francisco.pdf" target="_blank">San_Francisco</a></p>
-<p class="pdf-profile-link"><a href="San_Jose.pdf" target="_blank">San_Jose</a></p>
-<p class="pdf-profile-link"><a href="Scranton.pdf" target="_blank">Scranton</a></p>
-<p class="pdf-profile-link"><a href="Seattle.pdf" target="_blank">Seattle</a></p>
-<p class="pdf-profile-link"><a href="Spokane.pdf" target="_blank">Spokane</a></p>
-<p class="pdf-profile-link"><a href="Springfield.pdf" target="_blank">Springfield</a></p>
-<p class="pdf-profile-link"><a href="St._Louis.pdf" target="_blank">St._Louis</a></p>
-<p class="pdf-profile-link"><a href="Stockton.pdf" target="_blank">Stockton</a></p>
-<p class="pdf-profile-link"><a href="Syracuse.pdf" target="_blank">Syracuse</a></p>
-<p class="pdf-profile-link"><a href="Tampa.pdf" target="_blank">Tampa</a></p>
-<p class="pdf-profile-link"><a href="Toledo.pdf" target="_blank">Toledo</a></p>
-<p class="pdf-profile-link"><a href="Tucson.pdf" target="_blank">Tucson</a></p>
-<p class="pdf-profile-link"><a href="Tulsa.pdf" target="_blank">Tulsa</a></p>
-<p class="pdf-profile-link"><a href="Urban_Honolulu.pdf" target="_blank">Urban_Honolulu</a></p>
-<p class="pdf-profile-link"><a href="Virginia_Beach.pdf" target="_blank">Virginia_Beach</a></p>
-<p class="pdf-profile-link"><a href="Washington.pdf" target="_blank">Washington</a></p>
-<p class="pdf-profile-link"><a href="Wichita.pdf" target="_blank">Wichita</a></p>
-<p class="pdf-profile-link"><a href="Winston.pdf" target="_blank">Winston</a></p>
-<p class="pdf-profile-link"><a href="Worcester.pdf" target="_blank">Worcester</a></p>
-<p class="pdf-profile-link"><a href="Youngstown.pdf" target="_blank">Youngstown</a></p>
+<p class="pdf-profile-link"><a href="Akron.pdf" target="_blank">Akron»</a></p>
+<p class="pdf-profile-link"><a href="Albany.pdf" target="_blank">Albany»</a></p>
+<p class="pdf-profile-link"><a href="Albuquerque.pdf" target="_blank">Albuquerque»</a></p>
+<p class="pdf-profile-link"><a href="Allentown.pdf" target="_blank">Allentown»</a></p>
+<p class="pdf-profile-link"><a href="Atlanta.pdf" target="_blank">Atlanta»</a></p>
+<p class="pdf-profile-link"><a href="Augusta.pdf" target="_blank">Augusta»</a></p>
+<p class="pdf-profile-link"><a href="Austin.pdf" target="_blank">Austin»</a></p>
+<p class="pdf-profile-link"><a href="Bakersfield.pdf" target="_blank">Bakersfield»</a></p>
+<p class="pdf-profile-link"><a href="Baltimore.pdf" target="_blank">Baltimore»</a></p>
+<p class="pdf-profile-link"><a href="Baton_Rouge.pdf" target="_blank">Baton_Rouge»</a></p>
+<p class="pdf-profile-link"><a href="Birmingham.pdf" target="_blank">Birmingham»</a></p>
+<p class="pdf-profile-link"><a href="Boise_City.pdf" target="_blank">Boise_City»</a></p>
+<p class="pdf-profile-link"><a href="Boston.pdf" target="_blank">Boston»</a></p>
+<p class="pdf-profile-link"><a href="Bridgeport.pdf" target="_blank">Bridgeport»</a></p>
+<p class="pdf-profile-link"><a href="Buffalo.pdf" target="_blank">Buffalo»</a></p>
+<p class="pdf-profile-link"><a href="Cape_Coral.pdf" target="_blank">Cape_Coral»</a></p>
+<p class="pdf-profile-link"><a href="Charleston.pdf" target="_blank">Charleston»</a></p>
+<p class="pdf-profile-link"><a href="Charlotte.pdf" target="_blank">Charlotte»</a></p>
+<p class="pdf-profile-link"><a href="Chattanooga.pdf" target="_blank">Chattanooga»</a></p>
+<p class="pdf-profile-link"><a href="Chicago.pdf" target="_blank">Chicago»</a></p>
+<p class="pdf-profile-link"><a href="Cincinnati.pdf" target="_blank">Cincinnati»</a></p>
+<p class="pdf-profile-link"><a href="Cleveland.pdf" target="_blank">Cleveland»</a></p>
+<p class="pdf-profile-link"><a href="Colorado_Springs.pdf" target="_blank">Colorado_Springs»</a></p>
+<p class="pdf-profile-link"><a href="Columbia.pdf" target="_blank">Columbia»</a></p>
+<p class="pdf-profile-link"><a href="Columbus.pdf" target="_blank">Columbus»</a></p>
+<p class="pdf-profile-link"><a href="Dallas.pdf" target="_blank">Dallas»</a></p>
+<p class="pdf-profile-link"><a href="Dayton.pdf" target="_blank">Dayton»</a></p>
+<p class="pdf-profile-link"><a href="Deltona.pdf" target="_blank">Deltona»</a></p>
+<p class="pdf-profile-link"><a href="Denver.pdf" target="_blank">Denver»</a></p>
+<p class="pdf-profile-link"><a href="Des_Moines.pdf" target="_blank">Des_Moines»</a></p>
+<p class="pdf-profile-link"><a href="Detroit.pdf" target="_blank">Detroit»</a></p>
+<p class="pdf-profile-link"><a href="El_Paso.pdf" target="_blank">El_Paso»</a></p>
+<p class="pdf-profile-link"><a href="Fresno.pdf" target="_blank">Fresno»</a></p>
+<p class="pdf-profile-link"><a href="Grand_Rapids.pdf" target="_blank">Grand_Rapids»</a></p>
+<p class="pdf-profile-link"><a href="Greensboro.pdf" target="_blank">Greensboro»</a></p>
+<p class="pdf-profile-link"><a href="Greenville.pdf" target="_blank">Greenville»</a></p>
+<p class="pdf-profile-link"><a href="Harrisburg.pdf" target="_blank">Harrisburg»</a></p>
+<p class="pdf-profile-link"><a href="Hartford.pdf" target="_blank">Hartford»</a></p>
+<p class="pdf-profile-link"><a href="Houston.pdf" target="_blank">Houston»</a></p>
+<p class="pdf-profile-link"><a href="Indianapolis.pdf" target="_blank">Indianapolis»</a></p>
+<p class="pdf-profile-link"><a href="Jackson.pdf" target="_blank">Jackson»</a></p>
+<p class="pdf-profile-link"><a href="Jacksonville.pdf" target="_blank">Jacksonville»</a></p>
+<p class="pdf-profile-link"><a href="Kansas_City.pdf" target="_blank">Kansas_City»</a></p>
+<p class="pdf-profile-link"><a href="Knoxville.pdf" target="_blank">Knoxville»</a></p>
+<p class="pdf-profile-link"><a href="Lakeland.pdf" target="_blank">Lakeland»</a></p>
+<p class="pdf-profile-link"><a href="Las_Vegas.pdf" target="_blank">Las_Vegas»</a></p>
+<p class="pdf-profile-link"><a href="Little_Rock.pdf" target="_blank">Little_Rock»</a></p>
+<p class="pdf-profile-link"><a href="Los_Angeles.pdf" target="_blank">Los_Angeles»</a></p>
+<p class="pdf-profile-link"><a href="Louisville_Jefferson_County.pdf" target="_blank">Louisville_Jefferson_County»</a></p>
+<p class="pdf-profile-link"><a href="Madison.pdf" target="_blank">Madison»</a></p>
+<p class="pdf-profile-link"><a href="McAllen.pdf" target="_blank">McAllen»</a></p>
+<p class="pdf-profile-link"><a href="Memphis.pdf" target="_blank">Memphis»</a></p>
+<p class="pdf-profile-link"><a href="Miami.pdf" target="_blank">Miami»</a></p>
+<p class="pdf-profile-link"><a href="Milwaukee.pdf" target="_blank">Milwaukee»</a></p>
+<p class="pdf-profile-link"><a href="Minneapolis.pdf" target="_blank">Minneapolis»</a></p>
+<p class="pdf-profile-link"><a href="Nashville_Davidson.pdf" target="_blank">Nashville_Davidson»</a></p>
+<p class="pdf-profile-link"><a href="New_Haven.pdf" target="_blank">New_Haven»</a></p>
+<p class="pdf-profile-link"><a href="New_Orleans.pdf" target="_blank">New_Orleans»</a></p>
+<p class="pdf-profile-link"><a href="New_York.pdf" target="_blank">New_York»</a></p>
+<p class="pdf-profile-link"><a href="North_Port.pdf" target="_blank">North_Port»</a></p>
+<p class="pdf-profile-link"><a href="Ogden.pdf" target="_blank">Ogden»</a></p>
+<p class="pdf-profile-link"><a href="Oklahoma_City.pdf" target="_blank">Oklahoma_City»</a></p>
+<p class="pdf-profile-link"><a href="Omaha.pdf" target="_blank">Omaha»</a></p>
+<p class="pdf-profile-link"><a href="Orlando.pdf" target="_blank">Orlando»</a></p>
+<p class="pdf-profile-link"><a href="Oxnard.pdf" target="_blank">Oxnard»</a></p>
+<p class="pdf-profile-link"><a href="Palm_Bay.pdf" target="_blank">Palm_Bay»</a></p>
+<p class="pdf-profile-link"><a href="Philadelphia.pdf" target="_blank">Philadelphia»</a></p>
+<p class="pdf-profile-link"><a href="Phoenix.pdf" target="_blank">Phoenix»</a></p>
+<p class="pdf-profile-link"><a href="Pittsburgh.pdf" target="_blank">Pittsburgh»</a></p>
+<p class="pdf-profile-link"><a href="Portland.pdf" target="_blank">Portland»</a></p>
+<p class="pdf-profile-link"><a href="Providence.pdf" target="_blank">Providence»</a></p>
+<p class="pdf-profile-link"><a href="Provo.pdf" target="_blank">Provo»</a></p>
+<p class="pdf-profile-link"><a href="Raleigh.pdf" target="_blank">Raleigh»</a></p>
+<p class="pdf-profile-link"><a href="Richmond.pdf" target="_blank">Richmond»</a></p>
+<p class="pdf-profile-link"><a href="Riverside.pdf" target="_blank">Riverside»</a></p>
+<p class="pdf-profile-link"><a href="Rochester.pdf" target="_blank">Rochester»</a></p>
+<p class="pdf-profile-link"><a href="Sacramento.pdf" target="_blank">Sacramento»</a></p>
+<p class="pdf-profile-link"><a href="Salt_Lake_City.pdf" target="_blank">Salt_Lake_City»</a></p>
+<p class="pdf-profile-link"><a href="San_Antonio.pdf" target="_blank">San_Antonio»</a></p>
+<p class="pdf-profile-link"><a href="San_Diego.pdf" target="_blank">San_Diego»</a></p>
+<p class="pdf-profile-link"><a href="San_Francisco.pdf" target="_blank">San_Francisco»</a></p>
+<p class="pdf-profile-link"><a href="San_Jose.pdf" target="_blank">San_Jose»</a></p>
+<p class="pdf-profile-link"><a href="Scranton.pdf" target="_blank">Scranton»</a></p>
+<p class="pdf-profile-link"><a href="Seattle.pdf" target="_blank">Seattle»</a></p>
+<p class="pdf-profile-link"><a href="Spokane.pdf" target="_blank">Spokane»</a></p>
+<p class="pdf-profile-link"><a href="Springfield.pdf" target="_blank">Springfield»</a></p>
+<p class="pdf-profile-link"><a href="St._Louis.pdf" target="_blank">St._Louis»</a></p>
+<p class="pdf-profile-link"><a href="Stockton.pdf" target="_blank">Stockton»</a></p>
+<p class="pdf-profile-link"><a href="Syracuse.pdf" target="_blank">Syracuse»</a></p>
+<p class="pdf-profile-link"><a href="Tampa.pdf" target="_blank">Tampa»</a></p>
+<p class="pdf-profile-link"><a href="Toledo.pdf" target="_blank">Toledo»</a></p>
+<p class="pdf-profile-link"><a href="Tucson.pdf" target="_blank">Tucson»</a></p>
+<p class="pdf-profile-link"><a href="Tulsa.pdf" target="_blank">Tulsa»</a></p>
+<p class="pdf-profile-link"><a href="Urban_Honolulu.pdf" target="_blank">Urban_Honolulu»</a></p>
+<p class="pdf-profile-link"><a href="Virginia_Beach.pdf" target="_blank">Virginia_Beach»</a></p>
+<p class="pdf-profile-link"><a href="Washington.pdf" target="_blank">Washington»</a></p>
+<p class="pdf-profile-link"><a href="Wichita.pdf" target="_blank">Wichita»</a></p>
+<p class="pdf-profile-link"><a href="Winston.pdf" target="_blank">Winston»</a></p>
+<p class="pdf-profile-link"><a href="Worcester.pdf" target="_blank">Worcester»</a></p>
+<p class="pdf-profile-link"><a href="Youngstown.pdf" target="_blank">Youngstown»</a></p>
 
 
 <div style="position:relative;height:5px;width:100%;clear:both"></div>
